<resources>
    <string name="app_name">Lista de Libros </string>
    <string name="label_book">Pelicula: %s</string>
    <string name="label_title">Título: %s </string>
    <string name="label_author">Autor: %s</string>
    <string name="label_editorial">Editorial: %s</string>
    <string name="label_pages">Páginas: %d</string>
    <string name="label_listaLibros">Lista de Libros</string>
</resources>